src/test/deca/context/invalid/SansObjet/DeclVar-Mod-boolean-int-int.deca
// Description:
//    Declaration of a boolean variable using % operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    int y = 17; 
    boolean z = x % y ; 
}
